Syndicate fork fixes

--- a/contrib/debian/syndicate-qt.desktop
+++ b/contrib/debian/syndicate-qt.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=PIVX
-Comment=PIVX P2P Cryptocurrency
-Comment[fr]=PIVX, monnaie virtuelle cryptographique pair à pair
-Comment[tr]=PIVX, eşten eşe kriptografik sanal para birimi
+Name=Syndicate
+Comment=Syndicate P2P Cryptocurrency
+Comment[fr]=Syndicate, monnaie virtuelle cryptographique pair à pair
+Comment[tr]=Syndicate, eşten eşe kriptografik sanal para birimi
 Exec=syndicate-qt %u
 Terminal=false
 Type=Application
