--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -22,15 +22,15 @@ Build-Depends: debhelper,
  libqrencode-dev,
  libprotobuf-dev, protobuf-compiler
 Standards-Version: 3.9.2
-Homepage: http://www.syndicate.org
-Vcs-Git: git://github.com/PIVX-Project/PIVX.git
-Vcs-Browser: http://github.com/PIVX-Project/PIVX
+Homepage: http://www.synx.online
+Vcs-Git: git://github.com/Syndicate-Project/Syndicate.git
+Vcs-Browser: http://github.com/Syndicate-Project/Syndicate
 
 Package: syndicated
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: peer-to-peer network based digital currency - daemon
- PIVX is a free open source peer-to-peer electronic cash system that
+ Syndicate is a free open source peer-to-peer electronic cash system that
  is completely decentralized, without the need for a central server or
  trusted parties.  Users hold the crypto keys to their own money and
  transact directly with each other, with the help of a P2P network to
@@ -46,7 +46,7 @@ Package: syndicate-qt
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: peer-to-peer network based digital currency - Qt GUI
- PIVX is a free open source peer-to-peer electronic cash system that
+ Syndicate is a free open source peer-to-peer electronic cash system that
  is completely decentralized, without the need for a central server or
  trusted parties.  Users hold the crypto keys to their own money and
  transact directly with each other, with the help of a P2P network to
@@ -55,4 +55,4 @@ Description: peer-to-peer network based digital currency - Qt GUI
  Full transaction history is stored locally at each client.  This
  requires 1+ GB of space, slowly growing.
  .
- This package provides Pivx-Qt, a GUI for PIVX based on Qt.
+ This package provides Syndicate-Qt, a GUI for Syndicate based on Qt.
